fix: spacing in service card in service card component

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,6 +1,6 @@
 .markdown p {
 
-    @apply py-2 text-synetec_black text-xl font-light !important
+    @apply py-2 text-synetec_black text-xl font-light leading-normal !important
 
 }
 
